--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>My GitHub Website</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+
+    <header>
+        <div class="container">
+            <h1>Hot Asian Men Near You</h1>
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#myprofile">My Profile</a></li>
+                    <li><a href="#maps">Maps</a></li>
+                    <li><a href="#search">Search</a></li>
+                    <li><a href="#messages">Messages</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <section class="intro">
+            <h2>About</h2>
+            <p>This is a website for young adults to search out the hot asian men near them</p>
+            <p>This website is for Elana and the Pretty Princesses lore. Please do not take legal action.</p>
+        </section>
+
+        <section class="content">
+            <h2>Featured Hot Asian Men</h2>
+            <p></p>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>© 2025 Hot Asian Men Near You. All rights reserved.</p>
+        </div>
+    </footer>
+
+</body>
+
+</html>
 
