--- a/index.html
+++ b/index.html
@@ -1,51 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My GitHub Website</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Psychology Tutoring
+    </title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Arial, sans-serif;
+        }
+
+        header {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+        }
+
+        nav {
+            background-color: #f4f4f4;
+            padding: 1rem;
+        }
+
+        nav ul {
+            list-style-type: none;
+            display: flex;
+            justify-content: center;
+            gap: 2rem;
+        }
+
+        nav a {
+            text-decoration: none;
+            color: #333;
+        }
+
+        nav a:hover {
+            color: #007bff;
+        }
+
+        .main-content {
+            max-width: 800px;
+            margin: 2rem auto;
+            padding: 0 1rem;
+        }
+
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
-
 <body>
-
     <header>
-        <div class="container">
-            <h1>Hot Asian Men Near You</h1>
-            <nav>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#myprofile">My Profile</a></li>
-                    <li><a href="#maps">Maps</a></li>
-                    <li><a href="#search">Search</a></li>
-                    <li><a href="#messages">Messages</a></li>
-                </ul>
-            </nav>
-        </div>
+        <h1>Hot Asian Men Near You</h1>
     </header>
 
-    <main>
-        <section class="intro">
-            <h2>About</h2>
-            <p>This is a website for young adults to search out the hot asian men near them</p>
-            <p>This website is for Elana and the Pretty Princesses lore. Please do not take legal action.</p>
-        </section>
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#myprofile">My Profile</a></li>
+            <li><a href="#maps">Maps</a></li>
+            <li><a href="#search">Search</a></li>
+            <li><a href="#messages">Messages</a></li>
+        </ul>
+    </nav>
 
-        <section class="content">
-            <h2>Featured Hot Asian Men</h2>
-            <p></p>
-        </section>
-    </main>
+    <div class="main-content">
+        <h2>Welcome to Hot Asian Men Near You</h2>
+    <br>
+        <p> <b>How to use our website</b> <br>
+            Are you struggling with psychological concepts, research methods, or exam preparation? At Psychology Tutoring Hub, we’re here to help you succeed. Our experienced tutors provide personalized, one-on-one support tailored to your unique learning needs—whether you're a high school student, undergraduate, or lifelong learner. </p>
+    <br>
+        <p> <b>Why Hot Asian Men</b> </p>
+    <br>
+        <p> <b>What We Offer</b> </p>
+    <br>
+        <p> <b>Get Started Today</b> <br>
+            Unlock your potential in dating with the right services.</p>
+        </div>
+
+        <main>
+            <section class="intro">
+                <h2>About</h2>
+                <p>This is a website for young adults to search out the hot asian men near them</p>
+                <p>This website is a present for Elana and the Pretty Princesses lore. Please do not take legal action. This website is a joke.</p>
+            </section>    
 
     <footer>
-        <div class="container">
-            <p>© 2025 Hot Asian Men Near You. All rights reserved.</p>
-        </div>
+        <p>&copy; 2025 Hot Asian Men Near You. All rights reserved.</p>
     </footer>
-
 </body>
-
 </html>
-
