--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
     <div class="main-content">
         <h2>Welcome to Hot Asian Men Near You</h2>
     <br>
-        <p> <b>How to use our website</b> <br>
-            Are you struggling with psychological concepts, research methods, or exam preparation? At Psychology Tutoring Hub, we’re here to help you succeed. Our experienced tutors provide personalized, one-on-one support tailored to your unique learning needs—whether you're a high school student, undergraduate, or lifelong learner. </p>
+        <p> <b>How to use our website</b> </p>
     <br>
         <p> <b>Why Hot Asian Men</b> </p>
     <br>
@@ -85,14 +84,11 @@
     <br>
         <p> <b>Get Started Today</b> <br>
             Unlock your potential in dating with the right services.</p>
+    
+        <h2>About</h2>
+         <p>This is a website for young adults to search out the hot asian men near them</p>
+         <p>This website is a present for Elana and the Pretty Princesses lore. Please do not take legal action. This website is a joke.</p>
         </div>
-
-        <main>
-            <section class="intro">
-                <h2>About</h2>
-                <p>This is a website for young adults to search out the hot asian men near them</p>
-                <p>This website is a present for Elana and the Pretty Princesses lore. Please do not take legal action. This website is a joke.</p>
-            </section>    
 
     <footer>
         <p>&copy; 2025 Hot Asian Men Near You. All rights reserved.</p>
