--- a/index.html
+++ b/index.html
@@ -78,14 +78,15 @@
     <br>
         <p> <b>How to use our website</b> </p>
     <br>
-        <p> <b>Why Hot Asian Men</b> </p>
+        <p> <b>Why Hot Asian Men?</b> </p>
     <br>
         <p> <b>What We Offer</b> </p>
     <br>
         <p> <b>Get Started Today</b> <br>
             Unlock your potential in dating with the right services.</p>
-    
-        <h2>About</h2>
+    <br>
+    <br>
+        <h2>Side Note</h2>
          <p>This is a website for young adults to search out the hot asian men near them</p>
          <p>This website is a present for Elana and the Pretty Princesses lore. Please do not take legal action. This website is a joke.</p>
         </div>
