--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
 
         nav {
-            background-color: #f4f4f4;
+            background-color: #db479e;
             padding: 1rem;
         }
 
@@ -38,7 +38,7 @@
         }
 
         nav a:hover {
-            color: #007bff;
+            color: #e100ff;
         }
 
         .main-content {
