--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         }
 
         nav a:hover {
-            color: #e100ff;
+            color: #ffffff;
         }
 
         .main-content {
